fix: Menu on mobile

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -39,6 +39,8 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    height: 100vh;
+    z-index: 1;
   }
 }
 
@@ -82,6 +84,10 @@ header {
   }
 
   &.open {
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    z-index: 2;
     span {
       &:nth-child(1) {
         top: 10px;
@@ -120,8 +126,8 @@ header {
   background: linear-gradient(180deg, var(--primary), var(--lightshade));
 
   &.open {
-    width: calc(100vw);
-    height: calc(100vh);
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
   }
 
@@ -155,7 +161,7 @@ nav {
     @include max-desktop {
       position: fixed;
       top: calc(20vh);
-      left: calc(33vw);
+      left: 0;
       width: calc(100vw);
       height: calc(100vh - 100px);
       visibility: visible;
